--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./styles.css">
     <div class="table_bio">
         <img src="Screenshot 2025-03-13 171019.png" alt="No internet">
+        <img src="Screenshot 2025-03-13 171019.png" alt="No internet">
+        <img src="Screenshot 2025-03-13 171019.png" alt="No internet">
         <div class="name">
             <h1>Gafarov BiLoL</h1>
             <p>I'm player in cs2 With 2000 elo</p>
