upgrade div contact

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="./styles.css">
     <div class="table_bio">
         <img src="Screenshot 2025-03-13 171019.png" alt="No internet">
-        <img src="Screenshot 2025-03-13 171019.png" alt="No internet">
-        <img src="Screenshot 2025-03-13 171019.png" alt="No internet">
         <div class="name">
             <h1>Gafarov BiLoL</h1>
             <p>I'm player in cs2 With 2000 elo</p>
@@ -55,11 +53,12 @@
         <div class="contact">
             <label for="email">Your email:</label>
             <input type="email" id="email" placeholder="Youremail@gmail.com">
-        </div>
-            <textarea name="" id=""></textarea>
-        <div class="button">
-           <input type="submit" value="Send">
+            <label for="massage">Massage</label>
+            <textarea name="" id="massage"></textarea>
         </div>
     </div>
+    <div class="button">
+        <input type="submit" value="Send">
+     </div>
 </body>
 </html>
